# practicasMP-practica1

./: README.md
codigo/: circuloMedio.cpp
codigo/paso1/: circuloMedio
codigo/paso2/: circulo.cpp  principal  utilidades.cpp
codigo/paso3/: circulo.cpp  principal.cpp  punto.h  utilidades.h
codigo/paso4/include/: circulo.h
codigo/paso4/src/: circuloMedio.cpp
codigo/paso5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  makefile0.txt  makefile1.txt  makefile2.txt
codigo/paso5/include/: circulo.h  punto.h
codigo/paso5/src/: circulo.cpp
